{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "5a5a609b-a13d-4fb2-ae6d-acc42719a2e0",
            "actions": [
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "896e982e-0a53-4d11-bb32-fa5fd1728d72",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerClick",
                    "type": "Button",
                    "id": "927c6f8a-1134-464b-a5de-17bb5814dcff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c60c5285-1d0d-437a-9a60-d8f6237b9f1b",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1e70454-8689-4808-bf82-55a6f536f752",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "PointerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}